--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </audio>
 
         <div class="info">
-          <h1>Elektronomia</h1>
-          <p>Vision</p>
+          <h1>Vision</h1>
+          <p>Elektronomia</p>
         </div>
 
         <div class="controls">
@@ -71,7 +71,7 @@
       </div>
     </div>
 
-    <div id="player-2" class="player ">
+    <div id="player-2" class="player horizontal ">
       <div class="wrapper">
 
         <div class="info-wrapper">
@@ -82,8 +82,8 @@
           </audio>
 
           <div class="info">
-            <h1>Elektronomia</h1>
-            <p>Fire</p>
+            <h1>Fire</h1>
+            <p>Elektronomia</p>
           </div>
         </div>
 
@@ -138,8 +138,8 @@
           </audio>
 
           <div class="info">
-            <h1>Todd Helder</h1>
-            <p>Never Stop</p>
+            <h1>Never Stop</h1>
+            <p>Todd Helder</p>
           </div>
         </div>
 
